@@ -187,3 +187,6 @@
 - Changed the respawn time of T'chali's Hookah.
 - Changed the flags of Costume Scraps to allow every member of a group to loot it.
 - Changed the smart script for Wyrmcult Blackwhelp to give every member of a group the quest item.
+
+[2022-04-27]
+- Added the script for Netherstorm to make the quest Mark V is Alive! trigger for every member of a group.
